--- a/fxfontpicker/src/main/resources/styles/font_picker.css
+++ b/fxfontpicker/src/main/resources/styles/font_picker.css
@@ -11,5 +11,14 @@
     -fx-font-size: 1em;
 }
 
+.text-area .content {
+    -fx-background-color: transparent;    
+    -fx-text-fill:        -fx-text-background-color
+}
+
+.text-area {
+    -fx-background-color: transparent;
+    -fx-text-fill:        -fx-text-background-color
+}
 
 
