--- a/FXExperienceControls/src/main/resources/fxml/FXMLFontPicker.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLFontPicker.fxml
@@ -5,20 +5,20 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
 
-<fx:root styleClass="font-picker-pane" stylesheets="@../styles/font_picker.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxWidth="1.7976931348623157E308" styleClass="font-picker-pane" stylesheets="@../styles/font_picker.css" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane fx:id="textGridPanel" hgap="5.0" maxWidth="1.7976931348623157E308" vgap="3.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="NEVER" minWidth="85.0" />
-            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="200.0" />
+            <ColumnConstraints hgrow="SOMETIMES" prefWidth="75.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
             <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="0.0" minWidth="-Infinity" prefWidth="0.0" />
             <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="0.0" minWidth="-Infinity" prefWidth="0.0" />
          </columnConstraints>
@@ -26,18 +26,13 @@
             <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="42.0" vgrow="NEVER" />
             <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="42.0" vgrow="NEVER" />
             <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="42.0" vgrow="NEVER" />
-            <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="200.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="42.0" vgrow="NEVER" />
          </rowConstraints>
          <children>
             <Label alignment="CENTER" styleClass="prop-label" text="Family:" GridPane.halignment="LEFT">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin></Label>
-            <Label alignment="CENTER" styleClass="prop-label" text="Style:" GridPane.halignment="LEFT" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-            </Label>
             <Label styleClass="prop-label" text="Size:" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" />
@@ -56,7 +51,11 @@
             </HBox>
             <ComboBox fx:id="familyComboBox" prefHeight="38.0" prefWidth="260.0" styleClass="family-combo-box" GridPane.columnIndex="1" />
             <ChoiceBox fx:id="styleChoiceBox" prefHeight="32.0" prefWidth="150.0" styleClass="style-choice-box" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextArea fx:id="sampleFontText" editable="false" maxHeight="1.7976931348623157E308" maxWidth="400.0" minWidth="200.0" prefWidth="200.0" promptText="Sample Text" styleClass="sample-text" text="Sample Text" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.hgrow="NEVER" GridPane.rowIndex="3" GridPane.valignment="TOP" GridPane.vgrow="SOMETIMES" />
+            <Label layoutX="10.0" layoutY="113.0" styleClass="prop-label" text="Style:" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin></Label>
+            <Text fx:id="sampleFontText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="sample-text" text="Sample Text" GridPane.columnIndex="1" GridPane.rowIndex="3" />
          </children>
       </GridPane>
    </children>
